<resources>
    <string name="app_name">Recyclica</string>
    <string name="sing_up">Зарегестрироваться</string>
    <string name="sing_in">Войти</string>
    <string name="app_logo">app logo</string>
    <string name="background">Background</string>
    <string name="authorization">Авторизация</string>
    <string name="Password">Пароль</string>
    <string name="login">Логин</string>
    <string name="bottom_nav_map">Карта</string>
    <string name="bottom_nav_home">Домашняя</string>
    <string name="bottom_nav_recycler">Переработка</string>
    <string name="bottom_nav_profile">Профиль</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat_new_password">Повторите пароль</string>
    <string name="registration">Регистрация</string>
    <string name="next">Далее</string>
    <string name="new_user">Новый пользователь</string>
    <string name="email">Email</string>
    <string name="back">Назад</string>
    <string name="Create">Создать</string>
    <string name="options_title">Настройки</string>
    <string name="inf_title">Что можно утилизировать?</string>
    <string name="processing">Переработка</string>
    <string name="phone">Телефон</string>
    <string name="your_login">Ваш логин</string>
    <string name="login_or_email">Введите логин или email</string>
    <string name="input_your_login_or_email">Введите логин или email</string>
    <string name="error_passwords_is_not_equals">Пароли различаются</string>
    <string name="error_login_or_email_is_empty">Логин или Email пустой</string>
    <string name="error_password_is_not_repeat">Пароль не соответствует!</string>
    <string name="error_email_is_not_correct">Email is not correct</string>
    <string name="recycle_points">%1$d пунктов переработки</string>
    <string name="points_for_single_util">+%1$d баллов за 1 штуку</string>
    <string name="registered_in_the_service_since">в сервисе с %1$d</string>
</resources>
