<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/registration_tabs_height"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/auth_top"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:padding="4dp"
            android:text="@string/new_user"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/et_second_password_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_first_password_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_first_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:hint="@string/Password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_second_password_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/et_first_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_second_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:hint="@string/Password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_bottom">

        <Button
            android:id="@+id/bt_next_step"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="16sp"
            android:drawableEnd="@drawable/ic_chevron_primary_black_24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/Create"
            android:textColor="@color/colorPrimary" />
        <Button
            android:id="@+id/bt_back_step"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_chevron_left_black_24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/back"
            android:textColor="@color/colorPrimary" />

    </FrameLayout>
</LinearLayout>