<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_width="@dimen/registration_tabs_height"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_first_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/InputField"
        app:layout_constraintBottom_toTopOf="@+id/bt_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_first_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/Password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_second_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/InputField"
        app:layout_constraintBottom_toTopOf="@+id/et_first_password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_second_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/Password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_login"
        style="@style/Title"
        app:layout_constraintBottom_toTopOf="@+id/tv_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_sign_up"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_chevron_primary_black_24dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="TextView"
        style="@style/Information"
        app:layout_constraintBottom_toTopOf="@+id/et_second_password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>